RESOLVED FIXED98066
WebDocument doesn't export document language to outside users.
https://bugs.webkit.org/show_bug.cgi?id=98066
Summary WebDocument doesn't export document language to outside users.
Brian White
Reported 2012-10-01 14:02:28 PDT
The WebDocument class does not make available the determined "content-language" to users of that class. Patch forthcoming... -- Brian
Attachments
Patch (2.28 KB, patch)
2012-10-02 10:34 PDT, Brian White
no flags
Brian White
Comment 1 2012-10-02 10:34:41 PDT
WebKit Review Bot
Comment 2 2012-10-02 10:36:00 PDT
Please wait for approval from abarth@webkit.org, dglazkov@chromium.org, fishd@chromium.org, jamesr@chromium.org or tkent@chromium.org before submitting, as this patch contains changes to the Chromium public API. See also https://trac.webkit.org/wiki/ChromiumWebKitAPI.
WebKit Review Bot
Comment 3 2012-10-02 11:51:22 PDT
Comment on attachment 166709 [details] Patch Clearing flags on attachment: 166709 Committed r130191: <http://trac.webkit.org/changeset/130191>
WebKit Review Bot
Comment 4 2012-10-02 11:51:25 PDT
All reviewed patches have been landed. Closing bug.
Alexey Proskuryakov
Comment 5 2012-10-02 15:35:10 PDT
Please note that Content-Language is not "document language". It's "intended audience language". This distinction becomes of importance when dealing with a language textbook, for example.
Adam Barth
Comment 6 2012-10-02 16:12:53 PDT
Brian, would you be willing to add a comment to that effect to the API header?
Brian White
Comment 7 2012-10-03 06:45:16 PDT
Interesting! Unexpected, but understandable. The patch has been accepted and "landed" so I assume that means I can't just submit a new patch with the comment. How do I proceed? -- Brian
Adam Barth
Comment 8 2012-10-03 09:46:11 PDT
Please create a new bug and attach the patch that adds the comment. You can link from this bug to that bug by including the URL in a comment.
Note You need to log in before you can comment on or make changes to this bug.