WebDocument doesn't export document language to outside users. https://bugs.webkit.org/show_bug.cgi?id=98066

Patch by Brian White <bcwhite@chromium.org> on 2012-10-02
Reviewed by Adam Barth.

Chromium uses the document language to offer translation.  It's been doing
its own detection of this property but it would be better to get it from
existing extraction code.

* public/WebDocument.h:
(WebDocument):
* src/WebDocument.cpp:
(WebKit::WebDocument::contentLanguage):
(WebKit):

Canonical link: https://commits.webkit.org/116190@main
git-svn-id: https://svn.webkit.org/repository/webkit/trunk@130191 268f45cc-cd09-0410-ab3c-d52691b4dbfc